--- a/.github/workflows/working-dir-and-shells.yaml
+++ b/.github/workflows/working-dir-and-shells.yaml
@@ -19,9 +19,8 @@ jobs:
         steps:
             - name: Display Working Directory and List Files Windows
               run: |
-                pwd
-                ls -a
-                echo "::error:: My error"
-                echo $GITHUB_SHA
-                echo $GITHUB_REPOSITORY
-                echo $GITHUB_WORKSPACE
+                Get-Location
+                dir
+                echo $env:GITHUB_SHA
+                echo $env:GITHUB_REPOSITORY
+                echo $env:GITHUB_WORKSPACE
