--- a/.github/workflows/manually-triggered-wf.yaml
+++ b/.github/workflows/manually-triggered-wf.yaml
@@ -14,4 +14,6 @@ jobs:
         steps:
             - run: |
                 echo $GITHUB_REF
-                echo $GITHUB_SHA
+                echo $GITHUB_SHA\
+            - run: |
+                echo "${{inputs.inp1}}"
