--- a/.github/workflows/expressions-contexts-wf.yaml
+++ b/.github/workflows/expressions-contexts-wf.yaml
@@ -25,11 +25,11 @@ jobs:
               
             - name: Contexts
               run: |
-                echo ${{ toJson(github) }}
-                echo ${{ toJson(steps) }}
-                echo ${{ toJson(job) }}
-                echo ${{ toJson(runner) }}
-                echo ${{ toJson(secrets) }}
+                echo '${{ toJson(github) }}'
+                echo '${{ toJson(steps) }}'
+                echo '${{ toJson(job) }}'
+                echo '${{ toJson(runner) }}'
+                echo '${{ toJson(secrets) }}'
 
 
 
