--- a/.github/workflows/status-check-wf.yml
+++ b/.github/workflows/status-check-wf.yml
@@ -5,12 +5,14 @@ jobs:
     job-1:
         runs-on: ubuntu-latest
         steps:
-            - name: Step 1
-              run: echo "Hello Step 2 !"
-            - name: Step 2
+            - name: step-0
+              run: echo "this step succeed!"
+            - name: step-1
+              run: exit 1
+            - name: step-2
               run: exit 1
             - name: Run Only on failure
-              if: failure()
+              if: failure() && steps.step-1.conclusion=='failure'
               run: echo "step1 or 2 failed"
         
 
