--- a/.github/workflows/status-check-wf.yml
+++ b/.github/workflows/status-check-wf.yml
@@ -8,7 +8,7 @@ jobs:
             - name: step0
               run: echo "this step succeed!"
             - run: |
-                echo '${{ toJson(steps.step0) }}'
+                echo '${{ toJson(steps) }}'
             - name: step-1
               run: exit 1
             - name: step-2
