--- a/.github/workflows/status-check-wf.yml
+++ b/.github/workflows/status-check-wf.yml
@@ -7,7 +7,8 @@ jobs:
         steps:
             - name: step0
               run: echo "this step succeed!"
-            - run: |
+            - name: steps-context
+              run: |
                 echo '${{ toJson(steps) }}'
             # - name: step-1
             #   run: exit 1
