--- a/.github/workflows/status-check-wf.yml
+++ b/.github/workflows/status-check-wf.yml
@@ -7,7 +7,7 @@ jobs:
         steps:
             - name: step0
               run: echo "this step succeed!"
-            - name: steps-context
+            - name: steps-contexts
               run: |
                 echo '${{ toJson(steps) }}'
             # - name: step-1
