--- a/.github/workflows/status-check-wf.yml
+++ b/.github/workflows/status-check-wf.yml
@@ -8,16 +8,14 @@ jobs:
             - name: step0
               id: step0 
               run: echo "this step succeed!"
-            - name: steps-contexts
-              run: |
-                echo '${{ toJson(steps) }}'
-            # - name: step-1
-            #   run: exit 1
-            # - name: step-2
-            #   run: exit 1
-            # - name: Run Only on failure
-            #   if: failure() && steps.step-1.outcome == 'failure'
-            #   run: echo "step1 failed"
+            - name: step-1
+              id: step-1
+              run: exit 1
+            - name: step-2
+              run: exit 1
+            - name: Run Only on failure
+              if: failure() && steps.step-1.outcome == 'failure'
+              run: echo "step1 failed"
         
 
     job-2:
