--- a/.github/workflows/Eenv-vars-wf.yml
+++ b/.github/workflows/Eenv-vars-wf.yml
@@ -18,7 +18,8 @@ jobs :
                 echo $STEP_LEVEL_ENV
                 echo $JOB_LEVEL_ENV
 
-            - run: |
+            - if: ${{env.WF_LEVEL_ENV}} == "this is my WF env var"
+              run: |
                 echo $WF_LEVEL_ENV
                 echo $JOB_LEVEL_ENV
                 echo $STEP_LEVEL_ENV
