--- a/.github/workflows/Eenv-vars-wf.yml
+++ b/.github/workflows/Eenv-vars-wf.yml
@@ -30,8 +30,8 @@ jobs :
                 cat $GITHUB_ENV
 
             - run: |
-                TEST= 1111
-                echo "MY_ENV_VAR= TEST">> $GITHUB_ENV
+                TEST=1111
+                echo "MY_ENV_VAR= $TEST">> $GITHUB_ENV
                 cat $GITHUB_ENV
 
 
